kubernetes/apps/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app.kubernetes.io/name: portfolio
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: portfolio

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
