kubernetes/apps/portfolio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: portfolio-gateway
  namespace: portfolio

spec:
  gatewayClassName: envoy-gateway

  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: portfolio-proxy

  addresses:
    - type: IPAddress
      value: 192.168.29.241

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
